# chronos

./: .gitattributes  .gitignore  .travis.yml  README.md  build.sh  dependencies.sh  docs_build.sh  main.tex  or_tools_to_excel_input.sh  src_build.sh  timetable_template  ű
data/: chronos.ods
docs/: 32_result  README.md  database_plan  diploma.bbl  diploma.blg  diploma.tex
docs/chapters/: 01_requirement_specification.tex  01_task_analysis.tex  02_history.tex  02_market_analysis.tex  03_theory.tex  04_realisation.tex  05_problems_and_solutions.tex  06_results.tex  chapter.tex
docs/others/: abstract.tex  acknowledgement.tex  appendices.tex  declaration.tex  introduction.tex  mybib.bib  titlepage.tex
src/: CMakeLists.txt  client.pro
src/client/: client.cpp  client.h  main.cpp  resources.qrc
src/client/qml/: ClassView.qml  Login.qml  MainWindow.qml  Tables.qml  login.qml  main.qml
src/client/viewmodel/: class_view_model.cpp  class_view_model.h  login.cpp  login.h  tables.cpp  tables.h
src/common/database/: database.cpp  database.h  test_data.sql
src/common/entities/: class.cpp  class.h  class_type.cpp  class_type.h  course.cpp  course.h  course.json  department.cpp  department.h  distance.cpp  distance.h  faculty_member.cpp  faculty_member.h  generator.py  grade.cpp  grade.h  license.cpp  license.h  location.cpp  location.h  major.cpp  major.h  room.cpp  room.h  room_type.cpp  room_type.h  semester.cpp  semester.h  semester_type.cpp  semester_type.h
src/model/: CMakeLists.txt  data_model.json  generator.py  google_script.gs  model.pri  requirements.txt
src/model/descriptors/: data.sql  data_model.json  type_model.json
src/model/generator/: Code.gs  database_generator.py  entity_generator.py  generator.py  utils.py
src/model/manual/: database.cpp  database.h  database_service.cpp  database_service.h  proposal.cpp  proposal.h  timetable.cpp  timetable.h
src/server/: chronos.pl  database_manual.cpp  database_manual.h  main.cpp  proposal.cpp  proposal.h  server.cpp  server.h  timetable.cpp  timetable.h
src/server/database/: database.cpp  database.h
src/server/service/: service.cpp  service.h
tests/: 1_min_run  output_example_parallel_practices  result_1  result_2  result_4  result_8
